# remarkable-ai

./: .gitignore  README.md  pyproject.toml  tach.toml
.github/workflows/: ci.yml
skills/architect/: SKILL.md
skills/explain/: SKILL.md
skills/explain-me/: SKILL.md
src/remarkable_ai/: __init__.py  blank.py  calibrate.py  cli.py  remarkable.py  renderer.py  svg.py
src/remarkable_ai/adapters/: __init__.py  in_memory.py  remark_cli.py  renderer.py  setup.py  svg.py  templates.py
src/remarkable_ai/cli/: __init__.py  commands.py
src/remarkable_ai/core/: __init__.py  constants.py  errors.py  transport.py  types.py
