[project]
name = "remarkable-ai"
version = "0.1.0"
description = "Push diagrams to reMarkable, fetch annotated drawings, render handwritten notes — built for AI-human collaboration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Yassin Imbaby" }]
keywords = ["remarkable", "tablet", "annotation", "ai", "diagram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "cyclopts>=3.0",
    "rmscene>=0.5",
    "reportlab>=4.0",
    "pypdf>=4.0",
]

[project.scripts]
remarkable-ai = "remarkable_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remarkable_ai"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
