[project]
name = "remarkable-ai"
version = "0.2.0"
description = "Push diagrams to reMarkable, fetch annotated drawings, render handwritten notes — built for AI-human collaboration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Yassin Chibrani" }]
keywords = [
    "remarkable",
    "tablet",
    "annotation",
    "ai",
    "diagram",
    "claude-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "cyclopts>=3.0",
    "rmscene>=0.5",
    "reportlab>=4.0",
    "pypdf>=4.0",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.11", "ty>=0.0.1a7", "complexipy>=5.2", "tach>=0.34"]

[project.urls]
Repository = "https://github.com/Yassimba/remarkable-ai"

[project.scripts]
remarkable-ai = "remarkable_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remarkable_ai"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TRY003",   # long exception messages are fine inline
    "EM101",    # string literal exceptions are fine inline
    "EM102",    # f-string exception messages are fine
    "S603",     # subprocess calls use known commands
    "S607",     # partial executable paths are intentional (remark CLI)
    "S108",     # temp directory usage is fine
    "FBT001",   # boolean positional args are fine in CLI commands
    "FBT002",   # boolean defaults are fine in CLI commands
    "D203",     # conflicts with D211
    "D213",     # conflicts with D212
    "PLR2004",  # magic values like 2 are readable in context
    "COM812",   # conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"src/remarkable_ai/adapters/svg.py" = ["PLC0415"]  # cairosvg is optional, must be lazy
"src/remarkable_ai/cli/__init__.py" = ["E402"]      # commands import must follow app definition

[tool.complexipy]
max_complexity = 15

[tool.ty.rules]
unresolved-import = "warn"  # cairosvg is an optional lazy-loaded dependency
